SBuild trunk:

* Fixed a bug in SBuildEmbedded concerning incomplete file lists for local
  file dependencies.
* New ResolveFiles API to eagerly resolve dependencies, e.g. to fulfil 
  additional dependencies of a scheme handler.
* Changed SchemeHandler API again. Replaced the type String of the path
  parameter by the new type SchemeContext. With this change, a scheme handler
  is able to retrieve the effectively used scheme.
* Refactored initialization logic of ProjectTarget into Project. ProjectTarget
  is now free of any SchemeHandler logic.

SBuild 0.5.0 - 2013-07-12:

* Updated dependencies: Scala 2.10.2, Jansi 1.10.
* Added support to reference scheme handlers of other projects/modules.
* Added parameters useArgsFile, jvmArgs and sourcePath to Scalac addon.
* Added Scalac.scalaClasspath(version) classpath factory.
* Fix FileNotFoundException in execution of cacheable targets with path
  separators in it's name.
* Allow to evict caches per cacheable target.
* Huge speed up in up-to-date detection algorithm.
* Added SchemeHandler.replace method to make the intend to replace a already
  registered scheme handler explicit (and checked).
* New MapperSchemeHandler to translate schemes and/or pathes, to be used in
  "source" and "javadoc" scheme.
* New experimental default schemes "source" and "javadoc", that will try to
  provided sources and javadoc for any given dependency, e.g. 
  "source:mvn:a.b.1" will be translated to "mvn:a.b.1;classifier=sources"
* Fixed --fsc option.
* Fixed colored output under windows.
* Bash Completion support.
* BndJar addon creates now the target directory, if it does not exists.
* New experimental scheme handler to access 'val's and 'def's in projects in
  new project de.tototec.sbuild.experimental.
* Added mechanism to locate files relative to included scala files, via
  Path[Config]("path/relative/to/Config.scala").
* Removed deprecated code: IfNotUpToDate, PersistentUpToDateChecker. Their